--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </div>
     </div>
 
+    <div class="row d-flex justify-content-center" id="mainContent">
+      <div id="someid" class="col-lg-2 col-md-3 col-sm-5 col-xs-6"><img src="book.jpg">
+        <p>Name: Book1\nSuburb: Downtown\nWho: John</p>
+      </div>
+    </div>
 
     <!-- The following was derived from https://getbootstrap.com/docs/5.2/examples/footers/ -->
     <div class="container">
