Added a form to search.html
very basic form, has none of the useful information. will add actual inputs soon

--- a/search.html
+++ b/search.html
@@ -25,7 +25,24 @@
       </div>
     </div>
     
-
+    <!-- The following form was derived from https://getbootstrap.com/docs/4.0/components/forms/? -->
+    <!-- To be updated shortly -->
+    <div class="container">
+      <form>
+        <div class="form-group row">
+          <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="staticEmail" value="email@example.com">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+      </form>
+    </div>
 
 
     <!-- The following was derived from https://getbootstrap.com/docs/5.2/examples/footers/ -->
