--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
     <script src="index.js"></script>
+    <script src="search.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
@@ -16,12 +17,12 @@
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
       <a href="login.html">Login</a>
-      <a class="active" href="search.html">Search</a>
+      <a class="active" href="advancedsearch.html">Search</a>
       <div class="search-container">
-          <form action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search">
+        <form action="./search.html" accept-charset="UTF-8" method="get">
+          <input type="text" placeholder="Search.." name="q" maxlength="1024">
           <button type="submit"><i class="bi bi-search"></i></button>
-          </form>
+        </form>
       </div>
     </div>
     
@@ -29,24 +30,24 @@
     <!-- The following form was derived from https://getbootstrap.com/docs/4.0/components/forms/? -->
     <!-- To be updated shortly -->
     <div class="container">
-      <form>
+      <form action="./search.html" accept-charset="UTF-8" method="get">
         <div class="form-group row">
           <label for="nameSearch" class="col-sm-3 col-form-label">What are you looking for?</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="nameSearch" placeholder="Search for anything">
+            <input type="text" class="form-control" id="nameSearch" placeholder="Search for anything" name="q" maxlength="1024">
           </div>
         </div>
         <div class="form-group row">
           <label for="maxDistance" class="col-sm-3 col-form-label">Max distance</label>
           <div class="col-sm-8">
-            <input type="range" id="maxDistance" class="form-control" value="5" min="1" max="25" oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'">
+            <input name="md" type="range" id="maxDistance" class="form-control" value="5" min="1" max="25" oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'">
           </div>
           <div class="col-sm-1" id="maxDistanceDisplay"><output>5km</output></div>
         </div>
         <div class="form-group row">
           <label for="sortOrder" class="col-sm-3 col-form-label">Sort by</label>
           <div class="col-sm-9">
-            <select id="sortOrder" class="form-control">
+            <select name="order" id="sortOrder" class="form-control">
               <option selected>Choose...</option>
               <option>Newest</option>
               <option>Oldest</option>
