--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
   <body>
     <div class="topnav" id="topnav">
       <img src="logodefault.jpg" style="width:400px;height:100px;"/>
-      <a class="active" href="index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
       <a href="login.html">Login</a>
