Added file descriptors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
+    <!-- Top Nav bar -->
     <div class="topnav" id="topnav">
       <img src="logodefault.jpg" style="width:400px;height:100px;"/>
       <a class="active" href="index.html">Home</a>
@@ -26,6 +27,7 @@
       </div>
     </div>
 
+    <!-- This wrapper contains the items -->
     <div class="row d-flex justify-content-center" id="mainContent"></div>
 
     <!-- The following was derived from https://getbootstrap.com/docs/5.2/examples/footers/ -->
