--- a/Upload Page.html
+++ b/Upload Page.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="site.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
   <body>
-    <h1>
-      Form
-    </h1>
-    <input type="radio" id="give" name="postType">
-    <label for="give">Request</label><br>
-    <input type="radio" id="request" name="postType">
-    <label for="request">Give</label>
-    <br><br>
-    <label for="description">Item Description</label>
     <br>
-    <input type="text" id="description" placeholder="This item is...">
-    <br><br>
-    <label for="imgs">Select images:</label>
-    <input type="file" id="imgs" name="imgs" accept="image/*" multiple>
-    <br><br>
-    <input type="submit" value="Submit">
+    <div class="container" align="center">
+      <div class="col-sm-6" align="center">
+        <h1>
+          Post Upload Form
+        </h1>
+      </div>
+      <!--Radio Buttons to choose post type-->
+      <div class="col-sm-4 head" align="center">
+        <div class="input-group-prepend">
+          <label for="imgs">Post Type:</label>
+        </div>
+      </div>
+      <div class="col-sm-4" align="center">
+        <select class="custom-select" id="postType" name="postType" required>
+          <option selected>Choose...</option>
+          <option>Give</option>
+          <option>Request</option>
+        </select>
+      </div>
+      <br>
+      <div class="col-sm-4 head"  align="center">
+        <!--Text box for item description-->
+        <label for="description">Item Description:</label>
+      </div>
+      <div class="form-group col-sm-6"  align="center">
+        <!--<input class= "form-control-lg" type="text" id="description" placeholder="This item is...">-->
+        <textarea id="description" name="description" class="form-control" rows="3" placeholder="This item is..." required></textarea>
+      </div>
+      <br>
+      <!--Allow user to upload images for post-->
+      <div class="col-sm-4 head"  align="center">
+        <label for="imgs">Select images:</label>
+      </div>
+      <div class="col-sm-4"  align="center">
+        <input type="file" id="imgs" name="imgs" accept="image/*" multiple>
+      </div>
+      <br>
+      <div class="col-sm-4" align="center">
+        <input type="submit" value="Submit">
+      </div>
+      <br>
+  </div>
   </body>
 </html>
