--- a/Upload Page.html
+++ b/Upload Page.html
@@ -30,12 +30,21 @@
       </div>
       <br>
       <div class="col-sm-4 head"  align="center">
+        <!--Text box item-name-->
+        <label for="description">Item Name:</label>
+      </div>
+      <div class="form-group col-sm-6"  align="center">
+        <!--<input class= "form-control-lg" type="text" id="description" placeholder="This item is...">-->
+        <input type="text" id="item" name="item" class="form-control" rows="3" placeholder="The item is..." required></textarea>
+      </div>
+      <br>
+      <div class="col-sm-4 head"  align="center">
         <!--Text box for item description-->
         <label for="description">Item Description:</label>
       </div>
       <div class="form-group col-sm-6"  align="center">
         <!--<input class= "form-control-lg" type="text" id="description" placeholder="This item is...">-->
-        <textarea id="description" name="description" class="form-control" rows="3" placeholder="This item is..." required></textarea>
+        <textarea id="description" name="description" class="form-control" rows="3" placeholder="This item has..." required></textarea>
       </div>
       <br>
       <!--Allow user to upload images for post-->
